--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             </section>
 
             <section class="image-section">
-                <img src="{{ url_for('static', filename='images/img.png') }}" alt="Sample Image">
+<!--                 <img src="{{ url_for('static', filename='images/img.png') }}" alt="Sample Image"> -->
+                <img src="img.png" alt="Sample Image">
             </section>
         </div>
     </main>
@@ -93,7 +94,8 @@
             </div>
             <div class="card">
                 <picture>
-                    <img loading="lazy" alt="Icon: Upload" src="{{ url_for('static', filename='images/media 2.png') }}" width="190" height="194">
+                    <img src="media 2.png" alt="Sample Image" width="190" height="194">
+<!--                     <img loading="lazy" alt="Icon: Upload" src="{{ url_for('static', filename='images/media 2.png') }}" width="190" height="194"> -->
                 </picture>
                 <h3 id="continue-editing">3. Continue editing.</h3>
                 <p>Your new image will download as a JPG file. Save it, share it, or keep editing it to make it your own.</p>
